# pco_image

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: tests.yml
pco_image/: __init__.py  config.py  image.py
tests/: Cam0A.tiff  Cam0B.tiff  Cam1_0001A.b16  Cam1_0001B.b16  Cam1_1A_noshift.tiff  test_image.py  test_version.py
