[metadata]
name = pco_image
version = 0.4.0
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Tool to read and extract meta data from pco images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/pco_image
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pco_tools
    numpy
    opencv-python

[options.extras_require]
test =
    pytest

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[coverage:run]
relative_files = true

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    ImportError
    def plot
    def _plot
    def hist
    def plot_overlay